<resources>
    <string name="app_name">PJTwoUI</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="agr">Agree</string>
    <string name="register_ag">User Agreement</string>
    <string name="longin">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password</string>
    <string name="shared">Share</string>
    <string name="list">Property</string>
    <string name="list_t">Tenants</string>
    <string name="signin">SingIn</string>
    <string name="forgot_one">Enter your email to get password back</string>
    <string name="forgot_e">Here is your email</string>
    <string name="forgot_two">Here is your password</string>
    <string name="property_list"> Property</string>
    <string name="all_list">Tenant</string>
    <string name="property_add">Add Property</string>
    <string name="remove">Property Remove</string>
    <string name="pro_di">Property details</string>
    <string name="remove_p">Remove</string>
    <string name="property_remove">Remove Property</string>
    <string name="tenant_add">Add Tenant</string>
    <string name="tenant_List"> Tenant List</string>
    <string name="landlord">Landlord</string>
    <string name="tenant">Tenant</string>
    <string name="tenant_info">Tenant Info</string>
    <string name="landlord_info">Landlord Info</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_list">Property List</string>
</resources>