<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegiserActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/top_color"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/login_back"
            style="@style/toolBarsImg"/>


        <TextView
            style="@style/toolBarText"
            android:layout_marginLeft="20dp"
            android:layout_width="250dp"
            android:text="@string/forgot"
            app:fontFamily="@font/stalinist_one"></TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/top_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@color/background_color">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/top_color"
                android:text="@string/forgot_one">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/signUpInEditTextStyle"
                    android:hint="@string/email">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:gravity="center"
                android:textSize="20dp"
                android:text="@string/forgot_two"
                style="@style/signUpInEditTextStyle">
            </TextView>


            <Button
                android:text="@string/forgot"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="0dp"
                style="@style/button">
            </Button>


            <ImageView
                style="@style/mainImg"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>