<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/top_color"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/login_back"
            style="@style/toolBarsImg"/>


        <TextView
            style="@style/toolBarText"
            android:text="@string/longin"
            app:fontFamily="@font/stalinist_one"></TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/top_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@color/background_color">




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/email"
                    style="@style/signUpInEditTextStyle">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/password"
                    style="@style/signUpInEditTextStyle">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <Button
                    android:layout_marginTop="20dp"
                    android:text="@string/longin"
                    style="@style/button">
                </Button>

                <Button
                    android:layout_marginTop="20dp"
                    android:text="@string/forgot"
                    android:layout_marginLeft="30dp"
                    style="@style/button">
                </Button>

            </LinearLayout>


            <ImageView
                style="@style/mainImg"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>