<?xml version="1.0" encoding="utf-8"?>
<layout
    android:windowSoftInputMode="adjustPan"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="registerdata"
            type="com.myfirstapplication.pjtwoui.viewmodel.RegisterViewModel" />
    </data>


    <LinearLayout
        android:id="@+id/root_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RegisterActivity"

        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/top_color"
            android:orientation="horizontal"
            android:padding="10dp">


            <ImageView
                android:id="@+id/signin_back"
                style="@style/toolBarsImg" />


            <TextView
                app:fontFamily="@font/allerta"
                style="@style/toolBarText"
                android:text="@string/signin"
                android:layout_marginBottom="15dp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="#6ec6ff"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@color/text_color">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_MainEmail"
                        android:textColor="@color/top_color"
                        android:hint="Email"
                        app:fontFamily="@font/allerta"
                        android:inputType="text"
                        android:text="@={registerdata.email}"
                        style="@style/signUpInEditTextStyle">
                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_landEmail"
                        android:textColor="@color/top_color"
                        android:hint="Landlord Email"
                        android:inputType="text"
                        app:fontFamily="@font/allerta"
                        android:text="@={registerdata.landlordEmail}"
                        style="@style/signUpInEditTextStyle">
                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_regPassword"
                        android:hint="Password"
                        app:fontFamily="@font/allerta"
                        android:textColor="@color/top_color"
                        android:inputType="textPassword"
                        android:text="@={registerdata.password}"
                        style="@style/signUpInEditTextStyle">
                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">


                    <RadioGroup
                        android:layout_width="180dp"
                        android:layout_height="match_parent" >

                        <RadioButton
                            app:fontFamily="@font/allerta"
                            android:layout_marginLeft="40dp"
                            android:onClick="@{registerdata::isLandlord}"
                            android:layout_marginTop="15dp"
                            android:id="@+id/isLandlord"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/landlord" />

                        <RadioButton
                            app:fontFamily="@font/allerta"
                            android:layout_marginLeft="40dp"
                            android:onClick="@{registerdata::isTenant}"
                            android:id="@+id/isTenant"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tenant" />

                        <CheckBox
                            app:fontFamily="@font/allerta"
                            android:layout_marginLeft="40dp"
                            android:id="@+id/checkBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Agreement" />
                    </RadioGroup>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

<!--                        <com.google.android.material.button.MaterialButton-->
<!--                            android:onClick="@{registerdata::onRegister}"-->
<!--                            app:cornerRadius="20dp"-->
<!--                            android:id="@+id/button_register"-->
<!--                            android:text="@string/register"-->
<!--                            style="@style/button"-->
<!--                            android:layout_marginTop="0dp">-->
<!--                        </com.google.android.material.button.MaterialButton>-->


<!--                        <com.google.android.material.button.MaterialButton-->
<!--                            app:cornerRadius="20dp"-->
<!--                            android:id="@+id/button_register_google"-->
<!--                            android:text="@string/register_ag"-->
<!--                            style="@style/button"-->
<!--                            android:layout_marginTop="5dp">-->
<!--                        </com.google.android.material.button.MaterialButton>-->

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        app:cornerRadius="20dp"
                        android:visibility="gone"
                        app:fontFamily="@font/allerta"
                        android:id="@+id/button_Agreemnt"
                        android:text="Agreement"
                        style="@style/button"
                        android:layout_marginTop="0dp">
                    </com.google.android.material.button.MaterialButton>

                    <com.google.android.material.button.MaterialButton
                        android:onClick="@{registerdata::onRegister}"
                        app:cornerRadius="20dp"
                        android:visibility="gone"
                        android:id="@+id/button_register"
                        android:text="@string/register"
                        style="@style/button"
                        android:layout_marginTop="0dp">
                    </com.google.android.material.button.MaterialButton>

                    <com.google.android.gms.common.SignInButton
                        android:visibility="gone"
                        android:layout_marginLeft="95dp"
                        android:id="@+id/sign_in_button"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</layout>